# atri-bot

./: Cargo.toml  README.md
atri/: Cargo.toml
atri-core/: Cargo.toml
atri-core/src/: lib.rs  search.rs
atri-init/: Cargo.toml
atri-init/src/: main.rs
atri/src/: constants.rs  main.rs
atri/src/handler/: callback.rs  message.rs  mod.rs
atri/src/state/: mod.rs
src/: main.rs  setup.rs
src/search/: mod.rs
