[package]
name = "atri-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
serde = { version = "1.0.197", features = ["derive"] }
meilisearch-sdk = "0.24.3"

# logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["parking_lot"] }

[dependencies.reqwest]
version = "0.11.24"
default-features = false
features = ["rustls-tls-webpki-roots", "json"]
