[package]
name = "atri"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
lru = "0.12.1"
url = "2.5.0"
parking_lot = "0.12.1"
tokio = { version = "1.35.1", features = [
  "rt-multi-thread",
  "macros",
  "parking_lot",
] }

atri-core = { path = "../atri-core" }

[dependencies.teloxide]
version = "0.12.2"
default-features = false
features = ["macros", "throttle", "cache-me", "nightly", "rustls"]
